k8s/gitops/overlays/demo-lite-k3s/patches/api-generic-v2-k3s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: messaging-app
spec:
  template:
    spec:
      containers:
        - name: api
